--- a/stylesheets/graph.css
+++ b/stylesheets/graph.css
@@ -1,6 +1,43 @@
-.axis {
+/*reset*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video, svg, g, circle {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font: inherit;
+}
+
+/*styling*/
+
+body {
   font-family: 'Barlow Condensed', sans-serif;
-  /*font-family: 'Dosis', sans-serif;*/
+}
+
+h1 {
+  margin-top: 30px;
+  text-align: center;
+  font-size: 40px;
+}
+
+h3 {
+  margin-top: 10px;
+  text-align: center;
+  font-size: 25px;
+}
+
+.axis {
   font-size: 20px;
 }
 
@@ -15,4 +52,10 @@
   -webkit-box-shadow: inset 0px 0px 4px #ccc;
   -moz-box-shadow: inset 0px 0px 4px #ccc;
   box-shadow: inset 0px 0px 4px #ccc;
+}
+
+.subject-btns {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
