--- a/stylesheets/graph.css
+++ b/stylesheets/graph.css
@@ -37,6 +37,16 @@ h3 {
   font-size: 25px;
 }
 
+button {
+  padding: 5px 10px 5px 10px;
+  border-radius: 5px;
+  font-size: 15px;
+}
+
+svg {
+  margin-top: 30px;
+}
+
 .axis {
   font-size: 20px;
 }
@@ -58,4 +68,21 @@ h3 {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  position: absolute;
+  top: 300px;
+  margin-left: 10px;
+}
+
+.subject-btn {
+  margin-bottom: 10px;
+}
+
+.school-type-btns {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+
+.school-type-btn {
+  margin-left: 10px;
 }
