--- a/stylesheets/graph.css
+++ b/stylesheets/graph.css
@@ -41,9 +41,11 @@ button {
   padding: 5px 8px 5px 8px;
   border-radius: 5px;
   font-size: 14px;
+  cursor: pointer;
 }
 
-svg {
+.svg-container{
+  position: relative;
   margin-top: 30px;
 }
 
@@ -71,6 +73,7 @@ svg {
   position: absolute;
   top: 350px;
   margin-left: 40px;
+  z-index: 1;
 }
 
 .subject-btn {
@@ -93,6 +96,7 @@ svg {
   flex-direction: column;
   right: 100px;
   font-size: 20px;
+  z-index: 1;
 }
 
 #europe {
