--- a/stylesheets/graph.css
+++ b/stylesheets/graph.css
@@ -37,6 +37,12 @@ h3 {
   font-size: 22px;
 }
 
+strong {
+	margin-top: 10px;
+	display: block;
+	text-align: center;
+}
+
 button {
   padding: 5px 8px 5px 8px;
   border-radius: 5px;
