--- a/stylesheets/graph.css
+++ b/stylesheets/graph.css
@@ -25,8 +25,12 @@ body {
   font-family: 'Barlow Condensed', sans-serif;
 }
 
+tspan {
+	font-size: 20px;
+}
+
 h1 {
-  margin-top: 30px;
+  margin-top: 20px;
   text-align: center;
   font-size: 40px;
 }
@@ -52,7 +56,7 @@ button {
 
 .svg-container{
   position: relative;
-  margin-top: 30px;
+  margin-top: 10px;
 }
 
 .axis {
