move regions checkboxes to left and remove click country for more info subtitle

--- a/stylesheets/graph.css
+++ b/stylesheets/graph.css
@@ -104,7 +104,8 @@ button {
   position: absolute;
   display: flex;
   flex-direction: column;
-  right: 100px;
+  left: 45px;
+  top: 45px;
   font-size: 20px;
   z-index: 1;
 }
