--- a/stylesheets/graph.css
+++ b/stylesheets/graph.css
@@ -30,7 +30,6 @@ tspan {
 }
 
 h1 {
-  margin-top: 20px;
   text-align: center;
   font-size: 40px;
 }
@@ -100,12 +99,20 @@ button {
   margin-left: 10px;
 }
 
+.main-header {
+	/* position: absolute;
+	left: 50%;
+	top: 10%; */
+	margin-bottom: -50px;
+	margin-top: 30px;
+}
+
 .regions-checkboxes {
   position: absolute;
   display: flex;
   flex-direction: column;
   left: 45px;
-  top: 45px;
+  top: 70px;
   font-size: 20px;
   z-index: 1;
 }
