--- a/stylesheets/graph.css
+++ b/stylesheets/graph.css
@@ -67,13 +67,13 @@ button {
   font-size: 24px;
 }
 
-.subject-btn:focus {
+/* .subject-btn:focus {
   background: #e0e0e0;
   outline: none;
   -webkit-box-shadow: inset 0px 0px 4px #ccc;
   -moz-box-shadow: inset 0px 0px 4px #ccc;
   box-shadow: inset 0px 0px 4px #ccc;
-}
+} */
 
 .subject-btns {
   display: flex;
