disable text highlighting in code and info css classes

--- a/stylesheets/graph.css
+++ b/stylesheets/graph.css
@@ -120,6 +120,25 @@ button {
 .info {
 	height: 30px;
 	cursor: pointer;
+	-webkit-touch-callout: none;
+	-webkit-user-select: none; /* Webkit */
+	-moz-user-select: none;    /* Firefox */
+	-ms-user-select: none;     /* IE 10  */
+
+	/* Currently not supported in Opera but will be soon */
+	-o-user-select: none;
+	user-select: none;
+}
+
+.code {
+	-webkit-touch-callout: none;
+	-webkit-user-select: none; /* Webkit */
+	-moz-user-select: none;    /* Firefox */
+	-ms-user-select: none;     /* IE 10  */
+
+	/* Currently not supported in Opera but will be soon */
+	-o-user-select: none;
+	user-select: none;
 }
 
 .clicked {
