--- a/stylesheets/graph.css
+++ b/stylesheets/graph.css
@@ -12,7 +12,7 @@ table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
-time, mark, audio, video, svg, g, circle {
+time, mark, audio, video, svg, g, circle, button {
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -49,8 +49,117 @@ strong {
 button {
   padding: 5px 8px 5px 8px;
   border-radius: 5px;
-  font-size: 14px;
+  font-size: 16px;
   cursor: pointer;
+	border: 1px solid #d3d3d3;
+}
+
+.help-tip {
+    position: absolute;
+    text-align: center;
+    background-color: #BCDBEA;
+    border-radius: 50%;
+    width: 24px;
+    height: 24px;
+    font-size: 14px;
+    line-height: 26px;
+    cursor: default;
+}
+
+.subjects-tip {
+	left: 17px;
+	bottom: -30px;
+}
+
+.school-types-tip {
+	right: -40px;
+	bottom: 3px;
+}
+
+.help-tip:before{
+    content:'?';
+    font-weight: bold;
+    color:#fff;
+}
+
+.help-tip:hover p{
+    display:block;
+    /* transform-origin: 50% 50% 0; */
+
+    -webkit-animation: fadeIn 0.3s ease-in-out;
+    animation: fadeIn 0.3s ease-in-out;
+}
+
+.help-tip p{    /* The tooltip */
+    display: none;
+    text-align: left;
+    background-color: #1E2021;
+    padding: 20px;
+    width: 300px;
+    position: absolute;
+    border-radius: 3px;
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
+    color: #FFF;
+    font-size: 14px;
+    line-height: 1.4;
+}
+
+.subjects-tip p{
+	top: 30px;
+}
+
+.school-types-tip p{
+	bottom: 30px;
+}
+
+.subjects-tip p:after{ /* The pointer of the tooltip */
+    position: absolute;
+    content: '';
+    width:0;
+    height: 0;
+    border:6px solid transparent;
+    border-bottom-color:#1E2021;
+    left:7px;
+    top:-12px;
+}
+
+.school-types-tip p:before{ /* The pointer of the tooltip */
+    position: absolute;
+    content: '';
+    width:0;
+    height: 0;
+    border:6px solid transparent;
+    border-top-color:#1E2021;
+    left:7px;
+    bottom:-12px;
+}
+
+.help-tip p:after{ /* Prevents the tooltip from being hidden */
+    /* width:100%;
+    height:40px;
+    content:'';
+    position: absolute;
+    top:-40px;
+    left:0; */
+}
+
+/* CSS animation */
+
+@-webkit-keyframes fadeIn {
+    0% {
+        opacity:0;
+        transform: scale(0.6);
+    }
+
+    100% {
+        opacity:100%;
+        transform: scale(1);
+    }
+}
+
+@keyframes fadeIn {
+    0% { opacity:0; }
+    100% { opacity:100%; }
 }
 
 .svg-container{
@@ -89,10 +198,16 @@ button {
   margin-bottom: 10px;
 }
 
+.school-type-btns-container {
+	/* justify-content: center;
+	display: flex; */
+	/* margin-left: 500px; */
+	margin-bottom: 20px;
+}
+
 .school-type-btns {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 20px;
+	left: 520px;
+	position: absolute;
 }
 
 .school-type-btn {
