add on mouseover and mouseout functionality to unclicked circles to make them grow

--- a/stylesheets/graph.css
+++ b/stylesheets/graph.css
@@ -65,7 +65,7 @@ a {
 		display: flex;
 		justify-content: center;
 		align-items: center;
-    background-color: #BCDBEA;
+    background-color: #1c6e8c;
     border-radius: 50%;
     width: 20px;
     height: 20px;
