--- a/stylesheets/graph.css
+++ b/stylesheets/graph.css
@@ -107,8 +107,30 @@ a {
     animation: fadeIn 0.3s ease-in-out;
 }
 
+.help-tip:hover .help-tip-text{
+    display:block;
+    /* transform-origin: 50% 50% 0; */
+
+    -webkit-animation: fadeIn 0.3s ease-in-out;
+    animation: fadeIn 0.3s ease-in-out;
+}
+
 .help-tip p{    /* The tooltip */
     display: none;
+    text-align: left;
+    background-color: #1E2021;
+    padding: 20px;
+    width: 300px;
+    position: absolute;
+    border-radius: 3px;
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
+    color: #FFF;
+    font-size: 15px;
+    line-height: 1.4;
+}
+
+.help-tip-text {    /* The tooltip */
+    /* display: none; */
     text-align: left;
     background-color: #1E2021;
     padding: 20px;
