--- a/stylesheets/graph.css
+++ b/stylesheets/graph.css
@@ -93,6 +93,14 @@ a {
 	top: -47px;
 }
 
+.question-mark {
+	font-size: 15px;
+	-webkit-touch-callout: none;
+	-webkit-user-select: none; /* Webkit */
+	-moz-user-select: none;    /* Firefox */
+	-ms-user-select: none;     /* IE 10  */
+}
+
 .help-tip:before{
     content:'?';
     font-weight: bold;
