--- a/stylesheets/graph.css
+++ b/stylesheets/graph.css
@@ -272,10 +272,11 @@ a {
 }
 
 .main-header {
-	position: absolute;
+	/* position: absolute; */
 	left: 50px;
 	/* margin-bottom: -50px; */
 	margin-top: 20px;
+	display: inline-block;
 }
 
 .sub-header {
@@ -283,11 +284,11 @@ a {
 }
 
 .regions-checkboxes {
-  position: absolute;
-  display: flex;
+  /* position: absolute; */
+  display: inline-flex;
   /* flex-direction: column; */
-  right: 150px;
-  top: 80px;
+  /* right: 150px; */
+  /* top: 80px; */
   font-size: 20px;
   z-index: 1;
 }
