--- a/stylesheets/graph.css
+++ b/stylesheets/graph.css
@@ -257,6 +257,7 @@ a {
 
 .header-regions-container {
 	position: absolute;
+	z-index: 1;
 	width: 100%;
 	display: flex;
 	justify-content: space-between;
