--- a/stylesheets/graph.css
+++ b/stylesheets/graph.css
@@ -20,9 +20,13 @@ time, mark, audio, video, svg, g, circle, button {
 }
 
 /*styling*/
+html {
+	height: 100%;
+}
 
 body {
   font-family: 'Barlow Condensed', sans-serif;
+	height: 100%;
 }
 
 tspan {
@@ -208,6 +212,10 @@ a {
 
 .svg-container{
   position: relative;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
   margin-top: 10px;
 }
 
