change .text to .html for help tips to allow for line breaks

--- a/stylesheets/graph.css
+++ b/stylesheets/graph.css
@@ -253,11 +253,13 @@ a {
 
 .school-type-btns-container {
 	margin-bottom: 20px;
+	display: flex;
+	justify-content: center;
 }
 
 .school-type-btns {
 	left: 550px;
-	position: absolute;
+	/* position: absolute; */
 }
 
 .school-type-btn {
