--- a/stylesheets/graph.css
+++ b/stylesheets/graph.css
@@ -258,7 +258,12 @@ a {
 }
 
 .school-type-btns {
-	left: 550px;
+	display: inline;
+	/* position: absolute;
+	display: block;
+	width: 100%;
+	height: 50px; */
+	/* left: 550px; */
 	/* position: absolute; */
 }
 
