adjust margin top, left, and bottom of svg to allow graph to be bigger

--- a/stylesheets/graph.css
+++ b/stylesheets/graph.css
@@ -216,7 +216,7 @@ a {
 	height: 100%;
 	display: flex;
 	justify-content: center;
-  margin-top: 10px;
+  /* margin-top: 10px; */
 	align-items: center;
 }
 
